APPS-2608 Code style fixes, avoid scrollbars

--- a/web/src/main/resources/org/geogebra/web/resources/scss/av-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/av-styles.scss
@@ -237,7 +237,7 @@ $duration: 0.2s;
 		}
 		&::-webkit-scrollbar-thumb {
 			background: $white;
-			border-radius: 2px
+			border-radius: 2px;
 		}
 	}
 
